# cpp-snake

./: .gitignore  CMakeLists.txt  Config.hxx.in  FixupBundle.cmake.in  LICENSE  NonCopyable.hxx  README.md  SDL.cxx  SDL.hxx  SDLRenderer.cxx  SDLRenderer.hxx  SDLWindow.cxx  SDLWindow.hxx  Snake.desktop.in  main.cxx  snake-icon.icns  windows-resources.rc
assets/: translations.ini
cmake/: ProjectHelpers.cmake
game/: AssetManager.cxx  AssetManager.hxx  CreditsState.cxx  CreditsState.hxx  DummyState.cxx  DummyState.hxx  GameOverState.cxx  GameOverState.hxx  GameState.hxx  GameStateManager.cxx  GameStateManager.hxx  HighScoreManager.cxx  HighScoreManager.hxx  HighScoreState.cxx  HighScoreState.hxx  LoadingState.cxx  LoadingState.hxx  MenuState.cxx  MenuState.hxx  PlayingState.cxx  PlayingState.hxx  SplashState.cxx  SplashState.hxx  TranslationManager.cxx  TranslationManager.hxx
game/ui/: Button.cxx  Button.hxx  LineInput.cxx  LineInput.hxx  UiColor.cxx  UiColor.hxx
